--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -1,9 +1,7 @@
 .root {
-  background-color: yellowgreen;
-  margin: 0;
-  padding: 0;
-  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 90vh;
+  background-color: #8ebd30;
 }
