--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -1,7 +1,16 @@
 .root {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   height: 90vh;
-  background-color: #8ebd30;
+  background-image: url("../../../public/banner.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px;
+}
+
+.title {
+  font-size: 60px;
 }
