--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,13 +1,20 @@
 .root {
-  background-color: yellowgreen;
+  background-color: white;
   margin: 0;
   padding: 0;
   height: 10vh;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 0px 20px;
 }
 
 .headerTitle {
   color: black;
+}
+
+.logoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
