--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -3,7 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  height: 90vh;
+  height: 87vh;
+  width: 97%;
+  margin: 0 auto 3vh auto;
+  border-radius: 20px;
   background-image: url("../../../public/banner.jpg");
   background-position: center;
   background-repeat: no-repeat;
