--- a/src/components/nav/styles.module.css
+++ b/src/components/nav/styles.module.css
@@ -1,7 +1,8 @@
 .root {
   height: 8vh;
-  width: 400px;
+  min-width: 400px;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  gap: 5px;
 }
