--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -15,6 +15,8 @@
 
 .title {
   font-size: 60px;
+  margin: 0;
+  color: white;
 }
 
 .bannerContainer {
@@ -28,12 +30,19 @@
 }
 
 .profile {
-  height: 40vh;
-  width: 40vh;
+  height: 45vh;
+  width: 45vh;
+  margin: 30px;
   background-color: red;
   border-radius: 50%;
   background-image: url("../../../public/yo.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.paraph {
+  color: white;
+  padding: 0;
+  margin: 0;
 }
