--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -15,6 +15,13 @@
   width: 100%;
   border-radius: 20px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.textContainer {
+  width: 80%;
+  min-height: 500px;
+  padding: 0;
 }
