--- a/src/components/proyectsContainer/styles.module.css
+++ b/src/components/proyectsContainer/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   height: 87vh;
   width: 97%;
   margin: 0 auto 3vh auto;
