--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -7,10 +7,10 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
 
 .aboutContainer {
-  background-color: rgba(25, 0, 255, 0.459);
   height: 100%;
   width: 100%;
   border-radius: 20px;
@@ -22,6 +22,7 @@
 
 .textContainer {
   width: 80%;
-  min-height: 500px;
+  min-height: 200px;
   padding: 0;
+  font-size: 22px;
 }
