--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -11,6 +11,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
 
 .title {
