--- a/src/ui/navButton/styles.module.css
+++ b/src/ui/navButton/styles.module.css
@@ -9,4 +9,61 @@
   align-items: center;
   font-size: 18px;
   cursor: pointer;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+}
+
+.alert {
+  background-color: red;
+  color: white;
+  padding: 5px 17px;
+  min-width: 60px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+}
+
+.stack {
+  background-color: rgb(164, 255, 59);
+  color: black;
+  padding: 5px 17px;
+  min-width: 60px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+}
+
+.proyects {
+  background-color: rgb(252, 124, 199);
+  color: black;
+  padding: 5px 17px;
+  min-width: 60px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+}
+
+.contact {
+  background-color: rgb(0, 217, 255);
+  color: black;
+  padding: 5px 17px;
+  min-width: 60px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
