--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -40,10 +40,25 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
 
 .paraph {
   color: white;
   padding: 0;
+  margin: 0;
+}
+
+.linksContainer {
+  height: 6vh;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 20px;
+  width: 100px;
+}
+
+a {
   margin: 0;
 }
