--- a/src/components/stacContainer/styles.module.css
+++ b/src/components/stacContainer/styles.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 87vh;
+  height: 20vh;
   width: 97%;
   margin: 0 auto 3vh auto;
   border-radius: 20px;
@@ -11,4 +11,15 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.container {
+  min-height: 64vh;
+  width: 100%;
+  width: 97%;
+  border-radius: 20px;
+  margin: 0 auto 3vh auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
