--- a/src/ui/navButton/styles.module.css
+++ b/src/ui/navButton/styles.module.css
@@ -55,7 +55,7 @@
 }
 
 .contact {
-  background-color: rgb(0, 217, 255);
+  background-color: rgb(117 198 219);
   color: black;
   padding: 5px 17px;
   min-width: 60px;
