--- a/src/ui/jsvascript/styles.module.css
+++ b/src/ui/jsvascript/styles.module.css
@@ -1,5 +1,5 @@
 .logoContainer {
-  background-image: url("../../../public/github.png");
+  background-image: url("../../../public/js.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
