--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -56,9 +56,6 @@
   align-items: center;
   justify-content: space-evenly;
   border-radius: 20px;
-  width: 100px;
-}
-
-a {
-  margin: 0;
+  padding: 5px;
+  margin-top: 3vh;
 }
