--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -50,12 +50,14 @@
 }
 
 .linksContainer {
-  height: 6vh;
-  background-color: white;
+  min-height: 6vh;
+  gap: 10px;
+  background-color: rgba(255, 255, 255, 0.733);
+  width: 100px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  padding: 10px;
   border-radius: 20px;
-  padding: 5px;
   margin-top: 3vh;
 }
