--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -18,10 +18,11 @@
   font-size: 60px;
   margin: 0;
   color: white;
+  text-shadow: -1px 1px 1px #00000080;
 }
 
 .bannerContainer {
-  background-color: rgba(25, 0, 255, 0.459);
+  background-color: rgba(9, 1, 78, 0.459);
   height: 100%;
   width: 100%;
   border-radius: 20px;
@@ -47,6 +48,13 @@
   color: white;
   padding: 0;
   margin: 0;
+  text-shadow: -1px 1px 1px #00000080;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 .linksContainer {
