--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -1,5 +1,5 @@
 .root {
-  height: 87vh;
+  height: 20vh;
   width: 97%;
   margin: 0 auto 3vh auto;
   border-radius: 20px;
@@ -25,4 +25,7 @@
   min-height: 200px;
   padding: 0;
   font-size: 22px;
+  background-color: rgba(255, 255, 255, 0.733);
+  padding: 20px;
+  border-radius: 20px;
 }
