--- a/src/ui/navButton/styles.module.css
+++ b/src/ui/navButton/styles.module.css
@@ -41,7 +41,7 @@
 }
 
 .proyects {
-  background-color: rgb(252, 124, 199);
+  background-color: #febfb5;
   color: black;
   padding: 5px 17px;
   min-width: 60px;
