--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -22,7 +22,7 @@
 }
 
 .bannerContainer {
-  background-color: rgba(9, 1, 78, 0.459);
+  background-color: #301ecb75;
   height: 100%;
   width: 100%;
   border-radius: 20px;
@@ -35,7 +35,6 @@
   height: 45vh;
   width: 45vh;
   margin: 30px;
-  background-color: red;
   border-radius: 50%;
   background-image: url("../../../public/yo.jpg");
   background-position: center;
