--- a/src/components/proyectCard/styles.module.css
+++ b/src/components/proyectCard/styles.module.css
@@ -5,6 +5,7 @@
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  background-color: #eefff9;
 }
 
 .imgContainer {
@@ -18,5 +19,12 @@
 }
 
 .cardBody:hover {
-  background-color: palevioletred;
+  background-color: rgb(255, 228, 238);
+  transition: background-color 0.6s ease;
+}
+
+.cardLinks {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
