--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -28,14 +28,19 @@
 }
 
 .textContainer {
+  color: white;
   width: 97%;
   height: 60vh;
   margin: 0 auto 3vh auto;
   min-height: 200px;
   padding: 0;
   font-size: 22px;
-  background-color: rgba(182, 240, 255, 0.87);
   padding: 20px;
-  border-radius: 20px;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  /* From https://css.glass */
+  background: rgba(255, 255, 255, 0.31);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(11.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.26);
 }
