--- a/src/components/nav/styles.module.css
+++ b/src/components/nav/styles.module.css
@@ -5,4 +5,8 @@
   align-items: center;
   justify-content: space-around;
   gap: 5px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
