--- a/src/components/proyectCard/styles.module.css
+++ b/src/components/proyectCard/styles.module.css
@@ -6,7 +6,7 @@
   overflow: hidden;
   background: rgba(255, 255, 255, 0.31);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
   backdrop-filter: blur(11.5px);
   -webkit-backdrop-filter: blur(11.5px);
   border: 1px solid rgba(255, 255, 255, 0.26);
