--- a/src/components/proyectsContainer/styles.module.css
+++ b/src/components/proyectsContainer/styles.module.css
@@ -26,5 +26,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  background: rgba(255, 255, 255, 0.31);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(11.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.26);
 }
