--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -29,6 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
 
 .profile {
