--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #f3f2ef;
+  background: #121212;
   background-image: url("../public/banner.jpg");
   background-size: cover;
   background-position: center;
