--- a/src/components/proyectsContainer/styles.module.css
+++ b/src/components/proyectsContainer/styles.module.css
@@ -7,11 +7,11 @@
   width: 97%;
   margin: 0 auto 3vh auto;
   border-radius: 20px;
-  background-image: url("../../../public/proyects.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  background: rgba(255, 255, 255, 0.418);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(11.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.589);
 }
 
 .proyectsContainer {
