--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -6,30 +6,27 @@
   height: 85vh;
   width: 97%;
   margin: 0 auto 3vh auto;
-  border-radius: 20px;
-  background-image: url("../../../public/banner.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  border-radius: 25px;
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
 }
 
 .title {
   font-size: 60px;
   margin: 0;
-  color: white;
-  text-shadow: -1px 1px 1px #00000080;
+  color: rgb(0, 0, 0);
 }
 
 .bannerContainer {
-  background-color: #301ecb75;
   height: 100%;
   width: 100%;
   border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
+  backdrop-filter: blur(25.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.589);
 }
 
 .profile {
@@ -42,13 +39,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  border: 6px black solid;
 }
 
 .paraph {
-  color: white;
+  color: black;
   padding: 0;
   margin: 0;
-  text-shadow: -1px 1px 1px #00000080;
 }
 
 .textContainer {
@@ -69,4 +66,5 @@
   border-radius: 20px;
   margin-top: 3vh;
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  border: 2px white solid;
 }
