--- a/src/components/nav/styles.module.css
+++ b/src/components/nav/styles.module.css
@@ -5,8 +5,11 @@
   align-items: center;
   justify-content: space-around;
   gap: 5px;
-  background-color: white;
   padding: 10px;
-  border-radius: 20px;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.555);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
+  backdrop-filter: blur(11.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.589);
 }
