--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,12 +1,18 @@
 .root {
   background-color: #d0bbff00;
-  margin: 0;
-  padding: 0;
+  margin: 3vh auto;
   height: 12vh;
+  width: 97%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 20px;
+  padding: 0 10px;
+  border-radius: 25px;
+  background-color: rgba(0, 0, 0, 0.486);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
+  backdrop-filter: blur(11.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.589);
 }
 
 @media (max-width: 767px) {
