--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -9,6 +9,10 @@
   border-radius: 25px;
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
   overflow: hidden;
+  background-image: url("../../../public/banner.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .title {
