--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
   height: 85vh;
   width: 97%;
-  margin: 0 auto 3vh auto;
+  margin: 13vh auto 3vh auto;
   border-radius: 25px;
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
   overflow: hidden;
