--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -7,7 +7,7 @@
   width: 97%;
   margin: 13vh auto 3vh auto;
   border-radius: 25px;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
   overflow: hidden;
   background-image: url("../../../public/otro.jpg");
   background-position: center;
@@ -31,6 +31,7 @@
   box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
   backdrop-filter: blur(25.5px);
   -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.589);
 }
 
 .profile {
