--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -10,6 +10,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  /*box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);*/
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
+  backdrop-filter: blur(11.5px);
+  -webkit-backdrop-filter: blur(11.5px);
+  border: 1px solid rgba(255, 255, 255, 0.589);
   z-index: 2;
 }
