--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -1,5 +1,5 @@
 .root {
-  background-color: white;
+  background-color: #1d2226;
   position: fixed;
   top: 0;
   left: 0;
@@ -10,10 +10,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /*box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);*/
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
   backdrop-filter: blur(11.5px);
   -webkit-backdrop-filter: blur(11.5px);
-  border: 1px solid rgba(255, 255, 255, 0.589);
   z-index: 2;
 }
