--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -8,7 +8,7 @@
 .root {
   height: 15vh;
   width: 97%;
-  margin: 0 auto 3vh auto;
+  margin: 12vh auto 3vh auto;
   border-radius: 20px;
   background-image: url("../../../public/about.jpg");
   background-position: center;
@@ -29,8 +29,8 @@
 
 .textContainer {
   width: 97%;
-  height: 60vh;
-  margin: 0 auto 3vh auto;
+  height: 86vh;
+  margin: 12vh auto 3vh auto;
   min-height: 200px;
   padding: 0;
   font-size: 18px;
