--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -5,7 +5,7 @@
   align-items: flex-start;
   height: 90vh;
   width: 100%;
-  margin: 10vh auto 3vh auto;
+  margin-top: 10vh;
   overflow: hidden;
   background-image: url("../../../public/pexels-luis-gomes-546819.jpg");
   background-position: center;
@@ -14,18 +14,24 @@
 }
 
 .title {
-  font-size: 60px;
+  font-size: 50px;
   margin: 0;
   color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.733);
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 3vh;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  border: 2px white solid;
 }
 
 .bannerContainer {
   height: 100%;
   width: 100%;
-  border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(125, 149, 255, 0.233);
 }
 
 .profile {
@@ -50,6 +56,12 @@
   color: black;
   padding: 0;
   margin: 0;
+  padding: 10px;
+  border-radius: 20px;
+  margin-top: 3vh;
+  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+  border: 2px white solid;
+  background-color: rgba(255, 255, 255, 0.733);
 }
 
 .textContainer {
