--- a/src/components/logo/styles.module.css
+++ b/src/components/logo/styles.module.css
@@ -6,13 +6,15 @@
   height: 40px;
   width: 40px;
   border-radius: 50%;
+  border: 2px solid white;
 }
 
 .headerTitle {
   color: white;
   margin-left: 5px;
   font-size: 23px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 3px;
 }
 
 .logoContainer {
