--- a/src/components/stacContainer/styles.module.css
+++ b/src/components/stacContainer/styles.module.css
@@ -1,24 +1,8 @@
-.root {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 15vh;
-  width: 97%;
-  margin: 0 auto 3vh auto;
-  border-radius: 20px;
-  background-image: url("../../../public/stack.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
-}
-
 .container {
-  min-height: 20vh;
+  min-height: 15vh;
   width: 100%;
   width: 97%;
-  margin: 10vh auto 3vh auto;
+  margin: 10vh auto 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,9 +18,8 @@
 }
 
 .stack {
-  min-height: 68vh;
-  background-color: black;
+  min-height: 78vh;
+  background-color: #1d2226;
   width: 97%;
   margin: 0 auto;
-  border: 1px solid white;
 }
