--- a/src/components/proyectsContainer/styles.module.css
+++ b/src/components/proyectsContainer/styles.module.css
@@ -1,24 +1,11 @@
 .root {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   height: 15vh;
   width: 97%;
-  margin: 0 auto 3vh auto;
-  background: rgba(255, 255, 255, 0.418);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(11.5px);
-  -webkit-backdrop-filter: blur(11.5px);
-  border: 1px solid rgba(255, 255, 255, 0.589);
-  min-height: 20vh;
-  width: 97%;
-  margin: 10vh auto 3vh auto;
+  margin: 10vh auto 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.31);
-  border: 1px solid rgba(255, 255, 255, 0.26);
   background-image: url("../../../public/proyects.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -28,16 +15,11 @@
 .proyectsContainer {
   min-height: 65vh;
   max-width: 97%;
-  margin: 0 auto 3vh auto;
-  border-radius: 20px;
+  margin: 0 auto;
   width: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  background: rgba(255, 255, 255, 0.31);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(11.5px);
-  -webkit-backdrop-filter: blur(11.5px);
-  border: 1px solid rgba(255, 255, 255, 0.26);
+  background: #1d2226;
 }
