--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -7,8 +7,8 @@
 
 .root {
   height: 15vh;
-  width: 97%;
-  margin: 10vh auto 0 auto;
+  width: 80%;
+  margin: 0 0 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,9 +29,9 @@
 }
 
 .textContainer {
-  width: 97%;
-  height: 76vh;
-  margin: 0 auto 3vh auto;
+  width: 80%;
+  height: 85vh;
+  margin: 0 0 0 auto;
   min-height: 200px;
   padding: 0;
   font-size: 18px;
