--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -4,14 +4,11 @@
   bottom: 0;
   top: 0;
   left: 0;
-  width: 300px;
-  padding: 15px;
+  width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
-  backdrop-filter: blur(11.5px);
-  -webkit-backdrop-filter: blur(11.5px);
   z-index: 2;
+  padding: 0;
 }
