--- a/src/components/nav/styles.module.css
+++ b/src/components/nav/styles.module.css
@@ -1,13 +1,13 @@
 .root {
-  height: 88vh;
-  min-width: 300px;
+  height: 85vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   gap: 5px;
   padding: 10px;
-  background-color: rgb(63, 119, 119);
+  background-color: #000000;
 }
 
 @media (max-width: 767px) {
