--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  height: 90vh;
-  width: 100%;
-  margin-top: 10vh;
+  height: 100vh;
+  width: 80%;
+  margin: 0 0 0 auto;
   overflow: hidden;
   background-image: url("../../../public/pexels-bruno-thethe-1910230.jpg");
   background-position: center;
