--- a/src/components/proyectsContainer/styles.module.css
+++ b/src/components/proyectsContainer/styles.module.css
@@ -1,11 +1,10 @@
 .root {
   height: 15vh;
-  width: 97%;
-  margin: 10vh auto 0 auto;
+  width: 80%;
+  margin: 0 0 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.31);
   background-image: url("../../../public/proyects.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -14,8 +13,8 @@
 
 .proyectsContainer {
   min-height: 65vh;
-  max-width: 97%;
-  margin: 0 auto;
+  max-width: 80%;
+  margin: 0 0 0 auto;
   width: auto;
   display: flex;
   flex-wrap: wrap;
