--- a/src/components/stacContainer/styles.module.css
+++ b/src/components/stacContainer/styles.module.css
@@ -1,16 +1,10 @@
 .container {
   min-height: 15vh;
-  width: 100%;
-  width: 97%;
-  margin: 10vh auto 0 auto;
+  width: 80%;
+  margin: 0 0 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.31);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(11.5px);
-  -webkit-backdrop-filter: blur(11.5px);
-  border: 1px solid rgba(255, 255, 255, 0.26);
   background-image: url("../../../public/stack.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -18,8 +12,8 @@
 }
 
 .stack {
-  min-height: 78vh;
+  min-height: 85vh;
   background-color: #1d2226;
-  width: 97%;
-  margin: 0 auto;
+  width: 80%;
+  margin: 0 0 0 auto;
 }
