--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -7,7 +7,7 @@
   width: 80%;
   margin: 0 0 0 auto;
   overflow: hidden;
-  background-image: url("../../../public/pexels-bruno-thethe-1910230.jpg");
+  background-image: url("../../../public/code.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
