--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -7,7 +7,7 @@
   width: 80%;
   margin: 0 0 0 auto;
   overflow: hidden;
-  background-image: url("../../../public/code.jpg");
+  background-image: url("../../../public/code-dos.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(21, 28, 61, 0.63);
+  /*background-color: rgba(21, 28, 61, 0.63);*/
 }
 
 .profile {
@@ -68,7 +68,7 @@
 .textContainer {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: center;
 }
 
 .linksContainer {
