--- a/src/components/header/styles.module.css
+++ b/src/components/header/styles.module.css
@@ -12,3 +12,13 @@
   z-index: 2;
   padding: 0;
 }
+
+@media screen and (max-width: 600px) {
+  .root {
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    height: 10vh;
+    padding: 0 20px;
+  }
+}
