--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -12,6 +12,13 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media screen and (max-width: 600px) {
+  .root {
+    height: 100vh;
+    width: 100%;
+    margin: 0 auto;
+  }
+}
 
 .title {
   font-size: 50px;
