--- a/src/components/nav/styles.module.css
+++ b/src/components/nav/styles.module.css
@@ -5,9 +5,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  gap: 5px;
-  padding: 10px;
   background-color: #000000;
+  margin: 0;
+  padding: 0;
 }
 
 @media (max-width: 767px) {
