--- a/src/ui/navButton/styles.module.css
+++ b/src/ui/navButton/styles.module.css
@@ -1,46 +1,18 @@
-div {
+.root {
   width: 100%;
   height: 100%;
-}
-.root {
-  background-color: #6c6ce3;
+  background-color: black;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 18px;
+  font-size: 25px;
+  font-family: "Oswald", sans-serif;
   cursor: pointer;
+  transition: all 0.3s linear;
 }
 
-.stack {
-  background-color: rgb(164, 255, 59);
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  cursor: pointer;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
-}
-
-.proyects {
-  background-color: #febfb5;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  cursor: pointer;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
-}
-
-.contact {
-  background-color: rgb(117 198 219);
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  cursor: pointer;
-  box-shadow: 2px 2px 2px 1px rgb(0 0 0 / 20%);
+.root:hover {
+  background-color: #1d2226;
+  font-size: 28px;
 }
