--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -21,10 +21,10 @@
 }
 
 .title {
-  font-size: 50px;
+  font-size: 5rem;
   font-family: "Oswald";
   margin: 0;
-  color: white;
+  color: greenyellow;
 }
 
 .bannerContainer {
@@ -64,10 +64,4 @@
   justify-content: center;
   padding: 10px;
   border-radius: 20px;
-}
-
-video {
-  width: 100%;
-  height: auto;
-  z-index: 4;
 }
