--- a/src/ui/navButton/styles.module.css
+++ b/src/ui/navButton/styles.module.css
@@ -1,7 +1,7 @@
 .root {
   width: 100%;
   height: 100%;
-  background-color: purple;
+  background-color: yellowgreen;
   color: black;
   display: flex;
   justify-content: center;
