--- a/src/ui/menuButton/styles.module.css
+++ b/src/ui/menuButton/styles.module.css
@@ -1,12 +1,8 @@
 .root {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   border-radius: 25px;
-  background: rgba(255, 255, 255, 0.555);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.438);
-  backdrop-filter: blur(11.5px);
-  -webkit-backdrop-filter: blur(11.5px);
-  border: 1px solid rgba(255, 255, 255, 0.589);
+  border: 2px solid;
   display: none;
 }
 
@@ -20,8 +16,8 @@
 }
 
 .line {
-  height: 1px;
+  height: 2px;
   width: 60%;
-  background-color: white;
+  background-color: black;
   margin: 3px auto;
 }
