--- a/src/components/stacContainer/styles.module.css
+++ b/src/components/stacContainer/styles.module.css
@@ -11,9 +11,23 @@
   background-size: cover;
 }
 
+@media screen and (max-width: 600px) {
+  .container {
+    width: 100%;
+    margin: 10vh auto 0 auto;
+  }
+}
+
 .stack {
   min-height: 85vh;
   background-color: #1d2226;
   width: 80%;
   margin: 0 0 0 auto;
+}
+
+@media screen and (max-width: 600px) {
+  .stack {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
