--- a/src/components/banner/styles.module.css
+++ b/src/components/banner/styles.module.css
@@ -41,7 +41,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(68 0 88 / 83%);
+  background-image: linear-gradient(rgb(68 0 88 / 83%), black);
 }
 
 .profile {
