--- a/src/components/footer/styles.module.css
+++ b/src/components/footer/styles.module.css
@@ -1,9 +1,18 @@
 .root {
-  background-color: black;
-  height: 40vh;
+  background-color: white;
+  height: 30vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  width: 100%;
+  align-items: center;
+  width: 80%;
+  margin: 0 0 0 auto;
+}
+
+@media screen and (max-width: 600px) {
+  .root {
+    width: 100%;
+  }
+  .text {
+    font-size: 12px;
+  }
 }
