--- a/src/components/stacContainer/styles.module.css
+++ b/src/components/stacContainer/styles.module.css
@@ -21,8 +21,13 @@
 .stack {
   min-height: 85vh;
   background-color: #1d2226;
-  width: 80%;
+  max-width: 80%;
   margin: 0 0 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 @media screen and (max-width: 600px) {
