--- a/src/ui/navButton/styles.module.css
+++ b/src/ui/navButton/styles.module.css
@@ -1,36 +1,36 @@
 .root {
-  width: 100%;
-  height: 100%;
-  background-color: yellowgreen;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 25px;
-  font-family: "Oswald", sans-serif;
-  cursor: pointer;
-  transition: all 0.3s linear;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    font-family: "Oswald", sans-serif;
+    cursor: pointer;
+    transition: all 0.3s linear;
 }
 
 .root:hover {
-  background-color: white;
-  color: black;
+    background-color: white;
+    color: black;
 }
 
 .icon {
-  height: 30px;
-  width: auto;
+    height: 30px;
+    width: auto;
 }
 
 .container {
-  width: 50%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 @media screen and (max-width: 600px) {
-  .container {
-    width: 30%;
-  }
+    .container {
+        width: 30%;
+    }
 }
